--- a/src/style.css
+++ b/src/style.css
@@ -13,3 +13,42 @@ body {
   border-radius: 16px;
   padding: 30px;
 }
+
+header {
+  border-bottom: 1px solid aliceblue;
+  padding: 0 0 30px 0;
+}
+
+main {
+  padding: 30px 0;
+}
+
+a {
+  color: #385170;
+}
+
+.search-form-input {
+  background-color: #ace0f9;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+.search-button {
+  background: #385170;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: white;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  padding: 15px 0 0 0;
+  text-align: center;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
+}
