--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,37 @@ a {
   font-size: 28px;
   color: #385170;
 }
+
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+.weather-forecast-icon {
+  text-align: center;
+  font-size: 38px;
+}
+
+.weather-forecast-temps {
+  margin-top: 10px;
+  text-align: center;
+  color: #3baea0;
+  display: flex;
+  justify-content: center;
+}
+
+.weather-forecast-temp {
+  padding: 0 10px;
+}
 footer {
   border-top: 1px solid #f9f7fe;
   padding: 15px 0 0 0;
