--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+html {
+  height: auto;
+  min-height: 100%;
+}
 body {
   background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
   background-repeat: no-repeat;
@@ -21,6 +25,11 @@ header {
 
 main {
   padding: 30px 0;
+  text-align: left;
+  margin: 0;
+  font-size: 18px;
+  height: 100%;
+  line-height: 1.3;
 }
 
 a {
