--- a/src/style.css
+++ b/src/style.css
@@ -24,9 +24,10 @@ header {
 }
 
 main {
+  justify-content: space-between;
   padding: 30px 0;
   text-align: left;
-  margin: 0;
+  margin: 20px 0;
   font-size: 18px;
   height: 100%;
   line-height: 1.3;
@@ -96,7 +97,7 @@ a {
 
 .weather-forecast {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 30px;
 }
 
