--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,3 @@
-html {
-  height: auto;
-  min-height: 100%;
-}
 body {
   background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
   background-repeat: no-repeat;
@@ -24,13 +20,7 @@ header {
 }
 
 main {
-  justify-content: space-between;
   padding: 30px 0;
-  text-align: left;
-  margin: 20px 0;
-  font-size: 18px;
-  height: 100%;
-  line-height: 1.3;
 }
 
 a {
@@ -97,7 +87,7 @@ a {
 
 .weather-forecast {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 30px;
 }
 
